# recruiting-sw

./: readme.md
driverless/: readme.md
driverless/control/: readme.md
driverless/perception/: cones.pcd  first.pcd  readme.md  second.pcd
driverless/project_1/: readme.md
driverless/project_2/: readme.md
driverless/project_3/: readme.md
driverless/project_4/: readme.md
driverless/simulation 2/: readme.md
driverless/simulation-1/: readme.md
it_automation/: readme.md  task_1.md  task_2.md  task_3.md
it_automation/task_1/: README.md  areas.json  departments.json  users.json
it_automation/task_3/: README.md
microcontrollers/: readme.md
microcontrollers/media/: .$fsm.drawio.bkp
steering_wheel/: README.md  data.hpp  main.cpp  main.qml  readme.md  steering_wheel.pro
telemetry/: readme.md
telemetry/project_1/: CMakeLists.txt  readme.md
telemetry/project_1/core/: app.cpp  app.h  main.cpp
telemetry/project_1/csv_samples/: acceleration.csv  skidpad.csv
telemetry/project_2/: CMakeLists.txt  fake_receiver.c  fake_receiver.h  main.cpp  readme.md
website/: readme.md
